# linkerd2-proxy

./: .dockerignore  Cargo.toml  Dockerfile
linkerd/app/: Cargo.toml
linkerd/app/core/: Cargo.toml
linkerd/app/inbound/: Cargo.toml
linkerd/app/integration/: Cargo.toml
linkerd/app/outbound/: Cargo.toml
linkerd/app/src/: env.rs  identity.rs  lib.rs  metrics.rs  oc_collector.rs
linkerd/app/test/: Cargo.toml
linkerd/buffer/src/: dispatch.rs  lib.rs
linkerd/cache/src/: cache.rs  lib.rs  purge.rs
linkerd/duplex/src/: lib.rs
linkerd/error-metrics/src/: lib.rs
linkerd/fallback/src/: layer.rs  lib.rs
linkerd/http-metrics/: Cargo.toml
linkerd/http-metrics/src/: lib.rs  retries.rs
linkerd/io/: Cargo.toml
linkerd/io/src/: instrumented.rs  lib.rs  peek.rs  prefixed.rs
linkerd/lock/: Cargo.toml
linkerd/lock/src/: error.rs  lib.rs  lock.rs  service.rs  shared.rs  test.rs  waiter.rs
linkerd/metrics/src/: counter.rs  (+1 more)
linkerd/opencensus/: Cargo.toml
linkerd/probe-buffer/: Cargo.toml
linkerd/proxy/tcp/: Cargo.toml
linkerd/proxy/tcp/src/: forward.rs
linkerd/router/: Cargo.toml
linkerd/router/src/: lib.rs
linkerd/service-profiles/: Cargo.toml
linkerd/stack-tracing/: Cargo.toml
linkerd/strategy/: Cargo.toml
linkerd/trace-context/: Cargo.toml
linkerd/tracing/: Cargo.toml
linkerd/transport-header/: Cargo.toml
linkerd2-proxy/: Cargo.toml
linkerd2-proxy/src/: main.rs
opencensus-proto/: Cargo.toml
profiling/: Dockerfile-iperf  Dockerfile-proxy  Dockerfile-util  benchmark.sh  docker-compose.yml  profiling-perf.sh  profiling-util.sh
(+84 files in other folders)
