[package]
name = "linkerd2-proxy-tcp"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false


[dependencies]
futures = { version = "0.3", features = ["compat"] }
linkerd2-duplex = { path = "../../duplex" }
linkerd2-error = { path = "../../error" }
linkerd2-io = { path = "../../io" }
tokio = { version = "0.2" }
tower = { version = "0.3", default-features = false }
pin-project = "0.4"
tracing = { version = "0.1", default-features = false, features = ["std"]}
tracing-futures = { version = "0.2", default-features = false, features = ["std-future"]}